main/default/objects/SectionSetting__c/SectionSetting__c.object-meta.xml
<CustomObject>
    <description>Contains info to configure components that use sections</description>
    <label>Section Setting</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>