main/default/objects/SectionSetting__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>