main/default/objects/SectionSetting__c/fields/Custom_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Type__c</fullName>
    <description>Contains non standard field type from Salesforce or custom components</description>
    <label>Custom Field Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>