main/default/objects/SectionSetting__c/fields/DisplayType__c.field-meta.xml
<CustomField>
    <fullName>DisplayType__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Collapsed</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>