main/default/objects/SectionSetting__c/fields/Endorsement_Type__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Type__c</fullName>
    <label>Endorsement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midterm Cancellation</fullName>
            </value>
            <value>
                <fullName>Full Amendment</fullName>
            </value>
            <value>
                <fullName>Coverage Amendment</fullName>
            </value>
            <value>
                <fullName>Insured Account Update</fullName>
            </value>
            <value>
                <fullName>Flat Cancellation (Ab - Initio)</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Flat Cancellation</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>