main/default/objects/SectionSetting__c/fields/Group_Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Group_Field_Key__c</fullName>
    <formula>Record_Type__c +  Component__c +  Main_Section__c +  Sub_Section__c</formula>
    <label>Group Field Key</label>
    <type>Text</type>
</CustomField>