main/default/objects/SectionSetting__c/fields/Lookup_To__c.field-meta.xml
<CustomField>
    <fullName>Lookup_To__c</fullName>
    <label>Lookup To</label>
    <length>254</length>
    <type>Text</type>
</CustomField>