main/default/objects/SectionSetting__c/fields/Main_Section__c.field-meta.xml
<CustomField>
    <fullName>Main_Section__c</fullName>
    <label>Main Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>