main/default/objects/SectionSetting__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPL</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>PCC</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
            <value>
                <fullName>Private Company Combo</fullName>
            </value>
            <value>
                <fullName>Aqueous</fullName>
                <isActive>false</isActive>
                <label>Aqueous</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>