main/default/objects/SectionSetting__c/fields/Quote_Layer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Layer__c</fullName>
    <label>Quote Layer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>