main/default/objects/SectionSetting__c/fields/Source_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API__c</fullName>
    <label>Source Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>