main/default/objects/SectionSetting__c/fields/Source_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Label__c</fullName>
    <label>Source Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>