main/default/objects/SectionSetting__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Broker_Account__c</fullName>
                <label>Broker Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Policy_c</fullName>
                <label>Policy</label>
            </value>
            <value>
                <fullName>Rating_Modifier_Factor__c</fullName>
            </value>
            <value>
                <fullName>CoveragesLineItem__c</fullName>
            </value>
            <value>
                <fullName>Coverage_Limits_Deductibles__c</fullName>
            </value>
            <value>
                <fullName>Quote_Option__c</fullName>
            </value>
            <value>
                <fullName>Renewal__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>