main/default/objects/SectionSetting__c/fields/Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section__c</fullName>
    <label>Sub Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>