main/default/objects/SectionSetting__c/fields/Type_Of_Section__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Section__c</fullName>
    <formula>IF(ISBLANK(Sub_Section__c), IF(ISBLANK(Source_Field_API__c), &apos;MainSection&apos;, &apos;Field&apos;), IF(!ISBLANK(Source_Field_API__c), &apos;Field&apos;, &apos;SubSection&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Of Section</label>
    <type>Text</type>
</CustomField>