main/default/objects/SectionSetting__c/listViews/Account_Info_ListView.listView-meta.xml
<ListView>
    <fullName>Account_Info_ListView</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Component__c</columns>
    <columns>Main_Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Source_Field_API__c</columns>
    <columns>Source_Field_Label__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Criteria__c</columns>
    <columns>Order__c</columns>
    <columns>Format__c</columns>
    <columns>Type_Of_Section__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Profile_Name_for_Read_Only__c</columns>
    <columns>DisplayType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component__c</field>
        <operation>equals</operation>
        <value>Account Info</value>
    </filters>
    <label>Account Info</label>
</ListView>