main/default/objects/SectionSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Profile_Name_for_Read_Only__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Component__c</columns>
    <columns>Source_Field_API__c</columns>
    <columns>Source_Field_Label__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Main_Section__c</columns>
    <columns>Lookup_To__c</columns>
    <columns>Format__c</columns>
    <columns>Criteria__c</columns>
    <columns>Custom_Field_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Type_Of_Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>