main/default/objects/SectionSetting__c/listViews/Policy_Info.listView-meta.xml
<ListView>
    <fullName>Policy_Info</fullName>
    <columns>NAME</columns>
    <columns>Component__c</columns>
    <columns>Main_Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Source_Field_API__c</columns>
    <columns>Source_Field_Label__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component__c</field>
        <operation>equals</operation>
        <value>Policy Info</value>
    </filters>
    <label>Policy Info</label>
</ListView>