main/default/objects/SectionSetting__c/listViews/Submission_Info.listView-meta.xml
<ListView>
    <fullName>Submission_Info</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Component__c</columns>
    <columns>Main_Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Order__c</columns>
    <columns>Source_Field_API__c</columns>
    <columns>Source_Field_Label__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Type_Of_Section__c</columns>
    <columns>DisplayType__c</columns>
    <columns>Format__c</columns>
    <columns>Profile_Name_for_Read_Only__c</columns>
    <columns>Is_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component__c</field>
        <operation>equals</operation>
        <value>Submission Info</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Professional Indemnity</value>
    </filters>
    <filters>
        <field>Main_Section__c</field>
        <operation>equals</operation>
        <value>Submission Info</value>
    </filters>
    <label>Submission Info</label>
</ListView>